--- a/S1_76.html
+++ b/S1_76.html
@@ -100,7 +100,9 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-003r/full/full/0/default.jpg" n="5" style="--page_before: '4'; --beginning_page: '5';"></span><span class="pb_marker" n="5"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -131,7 +133,9 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-004v/full/full/0/default.jpg" n="8" style="--page_before: '7'; --beginning_page: '8';"></span><span class="pb_marker" n="8"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -316,6 +320,9 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-013r/full/full/0/default.jpg" n="25" style="--page_before: '24'; --beginning_page: '25';"></span><span class="pb_marker" n="25"></span><p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -433,6 +440,8 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-016v/full/full/0/default.jpg" n="32" style="--page_before: '31'; --beginning_page: '32';"></span><span class="pb_marker" n="32"></span><p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -446,6 +455,8 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-017r/full/full/0/default.jpg" n="33" style="--page_before: '32'; --beginning_page: '33';"></span><span class="pb_marker" n="33"></span><p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-017v/full/full/0/default.jpg" n="34" style="--page_before: '33'; --beginning_page: '34';"></span><span class="pb_marker" n="34"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -480,7 +491,14 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-020r/full/full/0/default.jpg" n="39" style="--page_before: '38'; --beginning_page: '39';"></span><span class="pb_marker" n="39"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -552,7 +570,13 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-023r/full/full/0/default.jpg" n="45" style="--page_before: '44'; --beginning_page: '45';"></span><span class="pb_marker" n="45"></span><p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-023v/full/full/0/default.jpg" n="46" style="--page_before: '45'; --beginning_page: '46';"></span><span class="pb_marker" n="46"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -580,7 +604,9 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-024v/full/full/0/default.jpg" n="48" style="--page_before: '47'; --beginning_page: '48';"></span><span class="pb_marker" n="48"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -628,6 +654,8 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-026r/full/full/0/default.jpg" n="51" style="--page_before: '50'; --beginning_page: '51';"></span><span class="pb_marker" n="51"></span><p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
@@ -650,6 +678,8 @@
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_76/files/images/A-Gf_S1_76-026v/full/full/0/default.jpg" n="52" style="--page_before: '51'; --beginning_page: '52';"></span><span class="pb_marker" n="52"></span><p class="yes-index"></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
