--- a/S1_58.html
+++ b/S1_58.html
@@ -69,49 +69,19 @@
                <div class="offcanvas-body"></div>
             </div>
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
-            <div id="editor-widget">
-               <div  id="aot-navBarNavDropdown" class="navBarNavDropdown dropstart"><a title="Annotationen" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" role="button"><i class="bi bi-gear" title="Menü zur Anpassung der Anzeige"></i></a><ul class="dropdown-menu">
-                     <li class="dropdown-item">
-                        <full-size opt="fls"></full-size>
-                     </li>
-                     <li class="dropdown-item">
-                        <image-switch opt="es"></image-switch>
-                     </li>
-                     <li class="dropdown-item">
-                        <font-size opt="fs"></font-size>
-                     </li>
-                     <li class="dropdown-item">
-                        <font-family opt="ff"></font-family>
-                     </li>
-                     <li class="dropdown-item" style="border-top: 2px dashed lightgrey !important;">
-                        <annotation-slider opt="entities-features"></annotation-slider>
-                     </li>
-                     <li class="dropdown-item">
-                        <annotation-slider opt="not"></annotation-slider>
-                     </li>
-                     <li class="dropdown-item">
-                        <annotation-slider opt="text"></annotation-slider>
-                     </li>
-                     <li class="dropdown-item">
-                        <annotation-slider opt="rub"></annotation-slider>
-                     </li>
-                     <li class="dropdown-item">
-                        <annotation-slider opt="ini"></annotation-slider>
-                     </li>
-                  </ul>
-               </div>
-            </div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
-                  <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_28.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
-                  </div>
-                  <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
-                     <h1 align="center">S 1/58 (Antiphonarium Seraphicum)</h1>
-                     <h3 align="center"><a href="S1_58.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
-                  </div>
-                  <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="S1_27.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                  <h1 align="center">S 1/58 (Antiphonarium Seraphicum)</h1>
+                  <div class="row" id="fa_links">
+                     <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4" style="text-align:right">
+                        <h1><a href="S1_28.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h1>
+                     </div>
+                     <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4 docinfo" style="text-align:center">
+                        <h3 align="center"><a href="S1_58.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
+                     </div>
+                     <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4" style="text-align:left">
+                        <h1><a href="S1_27.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h1>
+                     </div>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
