deploy: 0a0fe172d8fdac1d2c907320cf1bca6e712d0354

--- a/toc.html
+++ b/toc.html
@@ -1391,6 +1391,21 @@
                         </td>
                      <td>In progress</td>
                   </tr>
+                  <tr>
+                     <td><a href="TRAINING_VALIDATION_SET_Chorbuch_HTR_Hss_10082024.html"></a></td>
+                     <td><a href="TRAINING_VALIDATION_SET_Chorbuch_HTR_Hss_10082024.xml">TRAINING_VALIDATION_SET_Chorbuch_HTR_Hss_10082024.xml</a></td>
+                     <td></td>
+                     <td></td>
+                     <td></td>
+                     <td></td>
+                     <td></td>
+                     <td>[Handschrift]</td>
+                     <td></td>
+                     <td></td>
+                     <td></td>
+                     <td></td>
+                     <td>In progress</td>
+                  </tr>
                </tbody>
             </table>
             <h4>Tabelle herunterladen</h4>
