--- a/A67_43.html
+++ b/A67_43.html
@@ -79,7 +79,9 @@
                      <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="A67_43.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
-                     <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4" style="text-align:left"></div>
+                     <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4" style="text-align:left">
+                        <h1><a href="TRAINING_VALIDATION_SET_Chorbuch_HTR_Hss_10082024.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h1>
+                     </div>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
