--- a/A64_37.html
+++ b/A64_37.html
@@ -75,7 +75,7 @@
                   <div class="row" id="fa_links">
                      <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4" style="text-align:right"></div>
                      <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4 docinfo" style="text-align:center">
-                        <h3 align="center"><a href="A64_37.xml.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
+                        <h3 align="center"><a href="A64_37.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4" style="text-align:left">
                         <h1><a href="S1_28.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h1>
