--- a/S1_64.html
+++ b/S1_64.html
@@ -77,7 +77,7 @@
                         <h1><a href="S1_23.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h1>
                      </div>
                      <div class="col-xs-4 col-lg-4 col-sm-4 col-md-4 docinfo" style="text-align:center">
-                        <h3 align="center"><a href="S1_64.xml.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
+                        <h3 align="center"><a href="S1_64.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4" style="text-align:left">
                         <h1><a href="A64_41.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h1>
