deploy: 2c4ca9583f53c726ede499740bec58a61c6b334b

--- a/A70_41.html
+++ b/A70_41.html
@@ -374,20 +374,17 @@
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
                   <div class="textwidget custom-html-widget overflow-hidden"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/> Österreichische Akademie der Wissenschaften
                         <br/>Bäckerstraße 13 <br/> 1010 Wien
-                        <br/>T: +43 1 51581-2200 <br/> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                        <br/><i class="bi bi-telephone"></i>&nbsp;<a href="tel:+431515812200">+43 1 51581-2200</a><br/><i class="bi bi-envelope-at"></i>&nbsp;<a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                   </div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
                   <div class="row">
                      <div class="textwidget custom-html-widget overflow-hidden"><b>HELPDESK</b><p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie
                            sich bitte an den ACDH-CH Helpdesk.</p>
-                        <p><a class="helpdesk-button" href="mailto:acdh-ch-helpdesk@oeaw.ac.at">e-Mail</a></p>
                      </div>
                   </div>
                </div>
-               <div class="footer-widget col-lg-1 col-md-4 col-sm-3 overflow-hidden">
-                  <div class="float-right github"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
-               </div>
+               <div class="footer-widget footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden float-right"><a href="https://github.com/ofmgraz/ofm-static" class="to_center"><i class="bi bi-github"></i></a></div>
             </div>
          </div>
       </footer>
