--- a/S1_68.html
+++ b/S1_68.html
@@ -41221,9 +41221,12 @@
                   <div class="textwidget custom-html-widget"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 90%; height: auto;" title="ACDH Logo"></a></div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
-                  <div class="textwidget custom-html-widget overflow-hidden"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/> Österreichische Akademie der Wissenschaften
-                        <br/>Bäckerstraße 13 <br/> 1010 Wien
-                        <br/><i class="bi bi-telephone"></i>&nbsp;<a href="tel:+431515812200">+43 1 51581-2200</a><br/><i class="bi bi-envelope-at"></i>&nbsp;<a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                  <div class="textwidget custom-html-widget overflow-hidden"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
+                        Österreichische Akademie der Wissenschaften
+                        <br/>
+                        Bäckerstraße 13
+                        <br/> 1010 Wien
+                        <br/><i class="bi bi-telephone"></i>&nbsp;<a href="tel:+431515812200">+43 1 51581-2200</a><br/><i class="bi bi-envelope-at"></i>&nbsp;<a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                   </div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
@@ -41233,7 +41236,9 @@
                      </div>
                   </div>
                </div>
-               <div class="footer-widget footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden float-right"><a href="https://github.com/ofmgraz/ofm-static" class="to_center"><i class="bi bi-github"></i></a></div>
+               <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-center overflow-hidden no-padding">
+                  <div class="float-right github"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
+               </div>
             </div>
          </div>
       </footer>
