deploy: e72cf39e6655cb2b562f2e0a9aa4a6f7ea71f00c

--- a/index.html
+++ b/index.html
@@ -70,8 +70,35 @@
             <div class="col-md-8 col-lg-8 col-sm-12">
                <h2 style="text-align:center;">Choralhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
                   Graz</h2>
+               <h3 style="text-align:center;">Die Zentralbibliothek des Franziskanerklosters Graz verwahrt zahlreiche Choralquellen
+                  vom Beginn des 14. Jahrhunderts weg bis zum 19. Jahrhundert. In der Forschung wurden
+                  diese Handschriften und Drucke bislang wenig beachtet. Knapp ein Drittel der 56 Quellen
+                  stammt aus dem 14., 15. und 16. Jahrhundert, zwei Drittel sind aus dem 17. und 18.
+                  Jahrhundert und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung
+                  mit dem heute wenig beachteten Barockchoral.</h3>
             </div>
-            <div class="col-md-2 col-lg-2 col-sm-12 pad"></div>
+         </div>
+         <div class="subcontents">
+            <hr class="hr-custom">
+            <div class="row main-content">
+               <div class="column-picture col-lg-3 col-md-4 col-sm-3 overflow-hidden">Picture</div>
+               <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">
+                  <h3>Quellen</h3>
+                  <p>Text.</p>
+                  <div class="text-right"><a href="toc.html"><button class="btn btn-round" style="background-color: #A63437; color: white;">Weiter</button></a></div>
+               </div>
+            </div>
+            <hr class="hr-custom">
+            <div class="registers">
+               <h3>Registers</h3>
+               <div class="row main-content">
+                  <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">Places</div>
+                  <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">
+                     <h3>Printers</h3>
+                     <p>Text.</p>
+                  </div>
+               </div>
+            </div>
          </div>
       </main>
       <footer class="footer">
