deploy: c0182f0b2b0341d1d4f14ea2d29afbab39739daf

--- a/index.html
+++ b/index.html
@@ -65,38 +65,35 @@
       <main class="flex-grow-1 flex-shrink-1 bg">
          <div class="row pad"></div>
          <div class="row banner"></div>
-         <div class="row title">
-            <div class="col-md-2 col-lg-2 col-sm-12 pad"></div>
-            <div class="col-md-8 col-lg-8 col-sm-12">
-               <h2 style="text-align:center;">Choralhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
+         <div class="body-contents">
+            <div class="row title align-center">
+               <h2>Choralhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
                   Graz</h2>
-               <h3 style="text-align:center;">Die Zentralbibliothek des Franziskanerklosters Graz verwahrt zahlreiche Choralquellen
+               <h3>Die Zentralbibliothek des Franziskanerklosters Graz verwahrt zahlreiche Choralquellen
                   vom Beginn des 14. Jahrhunderts weg bis zum 19. Jahrhundert. In der Forschung wurden
                   diese Handschriften und Drucke bislang wenig beachtet. Knapp ein Drittel der 56 Quellen
                   stammt aus dem 14., 15. und 16. Jahrhundert, zwei Drittel sind aus dem 17. und 18.
                   Jahrhundert und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung
                   mit dem heute wenig beachteten Barockchoral.</h3>
+               <div class="button"><a href="about.html"><button class="btn btn-round">Über das Projekt</button></a></div>
             </div>
-         </div>
-         <div class="subcontents">
             <hr class="hr-custom">
-            <div class="row main-content">
-               <div class="column-picture col-lg-3 col-md-4 col-sm-3 overflow-hidden">Picture</div>
-               <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">
-                  <h3>Quellen</h3>
-                  <p>Text.</p>
-                  <div class="text-right"><a href="toc.html"><button class="btn btn-round" style="background-color: #A63437; color: white;">Weiter</button></a></div>
+            <div class="row subcontents align-center">
+               <div class="column-left overflow-hidden"><img class="img-fluid" src="images/image01.png" alt="Illumination einer Choralhandschrift"></div>
+               <div class="column-right overflow-hidden">
+                  <h3>Die Quellen</h3>
+                  <p class="p-cover">Die Grazer Zentralbibliothek verwahrt zahlreiche Choralquellen vom Beginn des 14.
+                     Jahrhunderts weg bis zum 19. Jahrhundert. Knapp ein Drittel der Quellen stammt aus
+                     dem 14., 15. und 16. Jahrhundert, zwei Drittel sind aus dem 17. und 18. Jahrhundert
+                     und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung mit dem
+                     heute wenig beachteten Barockchoral.</p>
+                  <div class="button"><a href="toc.html"><button class="btn btn-round">Weiter</button></a></div>
                </div>
             </div>
             <hr class="hr-custom">
-            <div class="registers">
-               <h3>Registers</h3>
-               <div class="row main-content">
-                  <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">Places</div>
-                  <div class="column-text col-lg-3 col-md-4 col-sm-3 overflow-hidden">
-                     <h3>Printers</h3>
-                     <p>Text.</p>
-                  </div>
+            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="row main-content">
+                  <div class="button column-left overflow-hidden"><a href="listplace.html"><button class="btn btn-round">Orte</button></a></div>
+                  <div class="button column-right overflow-hidden"><a href="listperson.html"><button class="btn btn-round">Drucker</button></a></div>
                </div>
             </div>
          </div>
