deploy: ae760f969fa03ec9f52c47069cd4ddb6513effad

--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                </div>
             </div>
             <hr class="hr-custom">
-            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="row main-content">
-                  <div class="button column-left overflow-hidden"><a href="listplace.html"><button class="btn btn-round">Orte</button></a></div>
-                  <div class="button column-right overflow-hidden"><a href="listperson.html"><button class="btn btn-round">Drucker</button></a></div>
-               </div>
+            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="button overflow-hidden"><a href="listplace.html"><button class="btn btn-round">Orte</button></a>
+                  &nbsp;
+                  <a href="listperson.html"><button class="btn btn-round">Drucker</button></a></div>
             </div>
          </div>
       </main>
