deploy: 0d19bbf87c64e2000c2c46b6723cb36700a9685a

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                      dem 14., 15. und 16. Jahrhundert, zwei Drittel sind aus dem 17. und 18. Jahrhundert
                      und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung mit dem
                      heute wenig beachteten Barockchoral.</p>
-                  <div class="button"><a href="books.html"><button class="btn btn-round">Weiter lesen</button></a>&nbsp;
-                     <a href="toc.html"><button class="btn btn-round">Die Bücher</button></a></div>
+                  <div class="button"><a href="books.html"><button class="btn btn-round btn-index">Weiter lesen</button></a>&nbsp;
+                     <a href="toc.html"><button class="btn btn-round btn-index">Die Bücher</button></a></div>
                </div>
             </div>
             <hr class="hr-custom">
-            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="button overflow-hidden"><a href="listplace.html"><button class="btn btn-round">Orte</button></a>
+            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="button overflow-hidden"><a href="listplace.html"><button class="btn btn-round btn-index">Orte</button></a>
                   &nbsp;
-                  <a href="listperson.html"><button class="btn btn-round">Drucker</button></a></div>
+                  <a href="listperson.html"><button class="btn btn-round btn-index">Drucker</button></a></div>
             </div>
          </div>
       </main>
