deploy: 41786bae5f4d0a4cf1ddaf4dff04599735e7b6e5

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                      und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung mit dem
                      heute wenig beachteten Barockchoral.</p>
                   <div class="button"><a href="books.html"><button class="btn btn-round btn-index">Weiter lesen</button></a>&nbsp;
-                     <a href="toc.html"><button class="btn btn-round btn-index">Die Bücher</button></a></div>
+                     <a href="toc.html"><button class="btn btn-round btn-index">Die Quellen</button></a></div>
                </div>
             </div>
             <hr class="hr-custom">
