deploy: 48690a31edd5e1030986d37bc5b86fc49648a337

--- a/S1_61.html
+++ b/S1_61.html
@@ -10399,8 +10399,12 @@
                <div class="spacing"></div>
                <div class="ftextwidget custom-html-widget"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image" alt="Finanziert von der Europäischen Union – NextGenerationEU" style="max-width: 90%; height: auto;" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
             </div>
-            <div class="footer-widget col col-lg-3 col-md-2 col-sm-2 overflow-hidden hide-mobile"><b>HELPDESK</b><p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie sich bitte an den
-                  ACDH-CH Helpdesk.</p>
+            <div class="footer-widget col col-lg-3 col-md-2 col-sm-2 overflow-hidden hide-mobile">
+               <h5 class="font-weight-bold hide-mobile align-left">​</h5>
+               <div class="textwidget custom-html-widget">
+                  <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie sich bitte an den
+                     <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">ACDH-CH Helpdesk</a>.</p>
+               </div>
             </div>
          </div>
       </footer>
