--- a/listperson.html
+++ b/listperson.html
@@ -66,7 +66,7 @@
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Drucker</h1>
             <div class="card-body drucker">
-               <ul>
+               <ul class="list">
                   <li><a href="Voigt.html">Leopold Voigt</a>, aktiv in <a href="Wien.html" target="_blank">Wien</a></li>
                   <li><a href="Mayr.html">Johann Baptist Mayr</a>, aktiv in <a href="Salzburg.html" target="_blank">Salzburg</a></li>
                   <li><a href="Pezzana.html">Giovanni Antonio Pezzana</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
