deploy: 295780e6402b9a7f880b9aeed1d50ee77529ff84

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                      dem 14., 15. und 16. Jahrhundert, zwei Drittel sind aus dem 17. und 18. Jahrhundert
                      und bilden somit einen starken, repräsentativen Bestand zur Beschäftigung mit dem
                      heute wenig beachteten Barockchoral.</p>
-                  <div class="button"><a href="books.html"><button class="btn btn-round btn-index">Weiter lesen</button></a>&nbsp;
+                  <div class="button overflow-hidden"><a href="books.html"><button class="btn btn-round btn-index">Weiter lesen</button></a>
+                     &nbsp;
                      <a href="toc.html"><button class="btn btn-round btn-index">Die Quellen</button></a></div>
                </div>
             </div>
