deploy: 7e5f3b10b47b53f10613c8f689546ea76f71bc3e

--- a/search.html
+++ b/search.html
@@ -70,7 +70,7 @@
             <div class="search-panel">
                <div class="search-panel__results">
                   <div class="row">
-                     <div class="col-md-4">
+                     <div class="col-md-4 facettes">
                         <div id="stats-container"></div>
                         <div id="searchbox"></div>
                         <div id="clear-refinements"></div>
