--- a/Ciera.html
+++ b/Ciera.html
@@ -76,27 +76,31 @@
          </div>
       </main>
       <footer  class="footer">
-         <div class="row footer justify-content-center overflow-hidden">
-            <div class="footer-widget row col col-lg-5 col-md-2 col-sm-2 col-xs-6 text-center overflow-hidden">
+         <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-6 col-sm-5 col-xs-2 text-center">
                <h5 class="font-weight-bold hide-mobile align-left">KONTAKT:</h5>
-               <div class="footer-widget col-lg-3 col-md-2 col-sm-2 col-xs-6 text-center overflow-hidden textwidget custom-html-widget logo"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 100%; height: auto;" title="ACDH Logo"></a></div>
-               <div class="footer-widget col-lg-7 col-md-4 col-sm-3 overflow-hidden logo-text hide-mobile align-left"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
-                     Österreichische Akademie der Wissenschaften
-                     <br/>
-                     Bäckerstraße 13
-                     <br/> 1010 Wien
-                     <br/><i class="bi bi-telephone"></i>&nbsp;<a href="tel:+431515812200">+43 1 51581-2200</a><br/><i class="bi bi-envelope-at"></i>&nbsp;<a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+               <div class="row">
+                  <div class="footer-widget col-lg-3 col-md-3 col-sm-4 col-xs-6"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
+                  <div class="footer-widget col-lg-7 col-md-7 col-sm-6  hide-mobile align-left"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
+                        Österreichische Akademie der Wissenschaften
+                        <br/>
+                        Bäckerstraße 13
+                        <br/> 1010 Wien
+                        <br/><i class="bi bi-telephone"></i>&nbsp;<a href="tel:+431515812200">+43 1 51581-2200</a><br/><i class="bi bi-envelope-at"></i>&nbsp;<a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                  </div>
                </div>
             </div>
-            <div class="footer-widget col col-lg- col-md-2 col-sm-2 overflow-hidden">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                <h5 class="font-weight-bold hide-mobile align-left">FÖRDERUNG:</h5>
-               <div class="textwidget custom-html-widget"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" style="max-width: 90%; height: auto;" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
-               <div class="spacing"></div>
-               <div class="ftextwidget custom-html-widget"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image" alt="Finanziert von der Europäischen Union – NextGenerationEU" style="max-width: 90%; height: auto;" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
+               <div class="row">
+                  <div class="footer-widget col-lg-8 text-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
+                  <div class="spacing"></div>
+                  <div class="footer-widget col-lg-8 text-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
+               </div>
             </div>
-            <div class="footer-widget col col-lg-3 col-md-2 col-sm-2 overflow-hidden hide-mobile">
+            <div class="col-lg-2 col-md-2 col-sm-2  hide-midi">
                <h5 class="font-weight-bold hide-mobile align-left">​</h5>
-               <div class="textwidget custom-html-widget">
+               <div class="footer-widget">
                   <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie sich bitte an den
                      <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">ACDH-CH Helpdesk</a>.</p>
                </div>
