--- a/S1_23.html
+++ b/S1_23.html
@@ -977,11 +977,13 @@
       </div>
       <footer  class="footer">
          <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-6 col-sm-5 col-xs-2 text-center">
+            <div class="col-4 col-md-5 text-center">
                <h5 class="font-weight-bold hide-mobile align-left">KONTAKT:</h5>
                <div class="row">
-                  <div class="footer-widget col-lg-3 col-md-3 col-sm-4 col-xs-6"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
-                  <div class="footer-widget col-lg-7 col-md-7 col-sm-6  hide-mobile align-left"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
+                  <div class="footer-widget col-12 col-md-3 pad"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
+                  <div class="footer-widget col-1 col-md-7 align-left"><b class="hide-mobile">ACDH-CH</b>&nbsp;&nbsp;&nbsp;
+                     
+                     <p class="hide-mobile"><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
                         Österreichische Akademie der Wissenschaften
                         <br/>
                         Bäckerstraße 13
@@ -990,7 +992,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+            <div class="col-6 col-md-4">
                <h5 class="font-weight-bold hide-mobile align-left">FÖRDERUNG:</h5>
                <div class="row">
                   <div class="footer-widget col-lg-8 text-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
@@ -998,7 +1000,7 @@
                   <div class="footer-widget col-lg-8 text-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
                </div>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2  hide-midi">
+            <div class="col-2 hide-midi">
                <h5 class="font-weight-bold hide-mobile align-left">​</h5>
                <div class="footer-widget">
                   <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie sich bitte an den
@@ -1007,5 +1009,5 @@
             </div>
          </div>
       </footer>
-      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a> | <a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
+      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary">© Copyright OEAW | <a href="imprint.html">Impressum</a> | <a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
 </html>
