--- a/S1_39.html
+++ b/S1_39.html
@@ -73,13 +73,13 @@
                <div class="row" id="edition_metadata">
                   <h1 align="center">S 1/39 (Et licet sint alia multa in quibus debeamus")</h1>
                   <div class="row" id="fa_links">
-                     <div class="col-xs-4 col-lg-4 col-sm-4 col-md-3" style="text-align:right">
+                     <div class="col-4" style="text-align:right">
                         <h1><a href="S1_26.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h1>
                      </div>
-                     <div class="col-xs-4 col-lg-4 col-sm-4 col-md-3 docinfo" style="text-align:center">
+                     <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="S1_39.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
-                     <div class="col-xs-4 col-lg-4 col-sm-4 col-md-3" style="text-align:left">
+                     <div class="col-4" style="text-align:left">
                         <h1><a href="A64_42.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h1>
                      </div>
                   </div>
