deploy: 1f178902704d31c46c4104ad93560ad736a036f6

--- a/Balleoni.html
+++ b/Balleoni.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Paolo Baglioni</h1>
+            <h2 class="text-center">Paolo Baglioni</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1632<br/><small>Todesdatum: </small>1721<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1037524810" target="_blank">1037524810</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q112399622" target="_blank">Q112399622</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
