--- a/Ciera.html
+++ b/Ciera.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Pietro Ciera</h1>
+            <h2 class="text-center">Pietro Ciera</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1650<br/><small>Todesdatum: </small>1706<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1051039606" target="_blank">1051039606</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
