--- a/Pezzana.html
+++ b/Pezzana.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Giovanni Antonio Pezzana</h1>
+            <h2 class="text-center">Giovanni Antonio Pezzana</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1717<br/><small>Todesdatum: </small>1779<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1102696757" target="_blank">1102696757</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q105889193" target="_blank">Q105889193</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
