--- a/Voigt.html
+++ b/Voigt.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Leopold Voigt</h1>
+            <h2 class="text-center">Leopold Voigt</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1650<br/><small>Todesdatum: </small>1706<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Wien.html" target="_blank">Wien</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1037512057" target="_blank">1037512057</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q56118770" target="_blank">Q56118770</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
