--- a/MariaLankowitz.html
+++ b/MariaLankowitz.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Maria Lankowitz</h1>
+            <h2 class="text-center">Maria Lankowitz</h2>
             <div id="map_detail"></div>
             <table class="table entity-table">
                <tbody>
