--- a/Mayr.html
+++ b/Mayr.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Johann Baptist Mayr</h1>
+            <h2 class="text-center">Johann Baptist Mayr</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1634<br/><small>Todesdatum: </small>1708<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Salzburg.html" target="_blank">Salzburg</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/124751946" target="_blank">124751946</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
