--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container-md">
-            <h1 class="text-center pb-4 pt-3">Über das Projekt</h1>
+            <h2 class="text-center">Über das Projekt</h2>
             <div class="container-fluid">
                
                <p id="d6e42">Ziel dieses Projekts ist die Digitalisierung von 56 spätmittelalterlichen und frühneuzeitlichen
