--- a/books.html
+++ b/books.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container-md">
-            <h1 class="text-center pb-4 pt-3">Über die Quellen</h1>
+            <h2 class="text-center">Über die Quellen</h2>
             <div class="container-fluid">
                		
                <p id="d8e56">Die Grazer Zentralbibliothek verwahrt zahlreiche Choralquellen vom Beginn des 14.
