--- a/imprint.html
+++ b/imprint.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container-md">
-            <h1 class="text-center pb-4 pt-3">Impressum</h1>
+            <h2 class="text-center">Impressum</h2>
             <div class="container-fluid">
                
                <div id="d9e37" class="lang de">
