--- a/listperson.html
+++ b/listperson.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Drucker</h1>
+            <h2 class="text-center">Drucker</h2>
             <div class="card-body drucker">
                <ul class="list">
                   <li><a href="Voigt.html">Leopold Voigt</a>, aktiv in <a href="Wien.html" target="_blank">Wien</a></li>
