--- a/search.html
+++ b/search.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1 overflow-hidden">
          <div class="container flex-1">
-            <h1 class="text-center pb-4 pt-3">Suche</h1>
+            <h2 class="text-center">Suche</h2>
          </div>
          <div class="container-fluid">
             <div class="search-panel">
