--- a/toc.html
+++ b/toc.html
@@ -64,7 +64,7 @@
       </div>
       <main class="flex-grow-1 overflow-hidden">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Quellen</h1>
+            <h2 class="text-center">Quellen</h2>
             <table class="table" id="myTable">
                <thead>
                   <tr>
