--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
          <div class="container flex-1">
             <h2 class="text-center">Suche</h2>
          </div>
-         <div class="container-fluid">
+         <div class="container-md">
             <div class="search-panel">
                <div class="search-panel__results">
                   <div class="row">
