--- a/toc.html
+++ b/toc.html
@@ -63,7 +63,7 @@
          </nav>
       </div>
       <main class="flex-grow-1 overflow-hidden">
-         <div class="container">
+         <div class="container-md">
             <h2 class="text-center">Quellen</h2>
             <table class="table" id="myTable">
                <thead>
@@ -980,8 +980,8 @@
             <div class="button-group"><button type="button" class="btn btn-outline-secondary" id="download-csv" title="Als CSV exportieren"><i class="bi bi-filetype-csv"></i><span class="visually-hidden">Als CSV exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-json" title="Als JSON exportieren"><i class="bi bi-filetype-json"></i><span class="visually-hidden">Als JSON exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-html" title="Als HTML exportieren"><i class="bi bi-filetype-html"></i><span class="visually-hidden">Als HTML exportieren</span></button></div>
          </div>
       </main>
-      <link href="https://unpkg.com/tabulator-tables@5.6.0/dist/css/tabulator.min.css" rel="stylesheet">
-      <link href="https://unpkg.com/tabulator-tables@5.6.0/dist/css/tabulator_bootstrap5.min.css" rel="stylesheet"><script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.6.0/dist/js/tabulator.min.js"></script><script src="tabulator-js/config.js"></script><script>
+      <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator.min.css" rel="stylesheet">
+      <link href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_bootstrap5.min.css" rel="stylesheet"><script type="text/javascript" src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script><script src="tabulator-js/config.js"></script><script>
             var table = new Tabulator("#myTable", config);
             //trigger download of data.csv file
             document.getElementById("download-csv").addEventListener("click", function(){
