--- a/search.html
+++ b/search.html
@@ -81,7 +81,7 @@
                         <div id="refinement-list-persons"></div>
                         <div id="refinement-range-year"></div>
                      </div>
-                     <div class="col-md-8">
+                     <div class="col-md-9 col-sd-8">
                         <div id="current-refinements"></div>
                         <div id="hits"></div>
                         <div id="pagination"></div>
