--- a/listperson.html
+++ b/listperson.html
@@ -63,9 +63,9 @@
          </nav>
       </div>
       <main class="flex-grow-1">
-         <div class="container">
+         <div class="container text-align-center">
             <h2 class="text-center">Drucker</h2>
-            <div class="card-body drucker">
+            <div class="col-6 drucker center">
                <ul class="list">
                   <li><a href="Voigt.html">Leopold Voigt</a>, aktiv in <a href="Wien.html" target="_blank">Wien</a></li>
                   <li><a href="Mayr.html">Johann Baptist Mayr</a>, aktiv in <a href="Salzburg.html" target="_blank">Salzburg</a></li>
