deploy: d432e6dea5e5dcf7678c9f2fc18244f0a6f33038

--- a/search.html
+++ b/search.html
@@ -70,7 +70,7 @@
             <div class="search-panel">
                <div class="search-panel__results">
                   <div class="row">
-                     <div class="col-md-4 facettes">
+                     <div class="col-lg-3 col-md-4 col-12 facettes">
                         <div id="stats-container"></div>
                         <div id="searchbox"></div>
                         <div id="clear-refinements"></div>
@@ -81,7 +81,7 @@
                         <div id="refinement-list-persons"></div>
                         <div id="refinement-range-year"></div>
                      </div>
-                     <div class="col-md-9 col-sd-8">
+                     <div class="col-lg-9 col-md-8 col-12">
                         <div id="current-refinements"></div>
                         <div id="hits"></div>
                         <div id="pagination"></div>
