deploy: fb5e1b33e71ff9c7478f327959cfc4698115398e

--- a/A63_51.html
+++ b/A63_51.html
@@ -9,6 +9,7 @@
       <meta  name="apple-mobile-web-app-title" content="Asperges me Domine">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
+      <meta  name="viewport" content="width=device-width, initial-scale=1.0">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
       <link  rel="icon" type="image/png" href="images/favicons/favicon-16x16.png">
       <link  rel="icon" type="image/png" href="images/favicons/favicon-32x32.png">
